crates/cribo/tests/snapshots/bundled_code@xfail_version_import_with_init_functions.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_version_import_with_init_functions/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
mypackage___version__ = _cribo.types.SimpleNamespace(__name__='mypackage.__version__')
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False)
mypackage.__version__ = mypackage___version__
"""Version information for the package."""
__version__ = "3.0.0"
mypackage___version__.__version__ = __version__
"""Main package module."""
mypackage.__version__ = __version__
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils')
mypackage.utils = mypackage_utils
"""Utilities module that needs version from sibling module."""
def get_user_agent():
    """Return user agent string with version."""
    return f"mypackage/{__version__}"
mypackage_utils.get_user_agent = get_user_agent
"""Test fixture for version imports with complex module initialization."""
mypackage.__version__ = __version__
mypackage.utils.get_user_agent = get_user_agent
print(f"User agent: {mypackage.utils.get_user_agent()}")
print(f"Version from package: {mypackage.__version__}")
