crates/cribo/tests/snapshots/bundling_error@pyfail_package_level_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
expression: error_msg
input_file: crates/cribo/tests/fixtures/pyfail_package_level_cycles/main.py
---
Bundling failed as expected: Entry module 'main' not found
