crates/cribo/tests/snapshots/bundling_error@pyfail_relative_import_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
expression: error_msg
input_file: crates/cribo/tests/fixtures/pyfail_relative_import_cycles/main.py
---
Bundling failed as expected: Entry module 'main' not found
