crates/cribo/tests/snapshots/bundling_error@pyfail_three_module_cycle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
expression: error_msg
input_file: crates/cribo/tests/fixtures/pyfail_three_module_cycle/main.py
---
Bundling failed as expected: Entry module 'main' not found
