crates/cribo/tests/snapshots/execution_results@all_variable_loop_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/all_variable_loop_reference/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello from MyClass\nHello from my_func",
    stderr: "",
}
